fix responsive text on EducationTimeLine component

--- a/src/utils/i18n/locales/es/dataCV.json
+++ b/src/utils/i18n/locales/es/dataCV.json
@@ -5,7 +5,7 @@
     "ExperienceH2": "Experiencia <1>Laboral</1>",
     "HabilidadesH2": "Habilidades",
     "IdiomasH3": "Idiomas",
-    "PortfolioH1": "Mis últimos <1>trabajos realizados</1>",
+    "PortfolioH1": "Últimos <1>trabajos</1>",
     "ContactoH1": "Información de Contacto",
     "formacion_academica": [
         {
